--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Sep 04 2024 18:18:03 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Sep 05 2024 03:54:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66d8072b738d878ba01453a3" data-wf-site="66d8072b738d878ba014536e">
 <head>
   <meta charset="utf-8">
@@ -29,17 +29,17 @@
         <source src="videos/flutteringsmoke-transcode.mp4" data-wf-ignore="true">
         <source src="videos/flutteringsmoke-transcode.webm" data-wf-ignore="true">
       </video></div>
-    <div data-w-id="75c5ed7e-9c99-f90e-e16d-94124a096777" style="opacity:0;-webkit-transform:translate3d(0, 0, 0) scale3d(0.7, 0.7, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.7, 0.7, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.7, 0.7, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.7, 0.7, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" data-current="JUMPTAG Club&#x27;s Links" data-easing="ease" data-duration-in="300" data-duration-out="100" class="tabs w-tabs">
+    <div data-w-id="75c5ed7e-9c99-f90e-e16d-94124a096777" style="opacity:0;-webkit-transform:translate3d(0, 0, 0) scale3d(0.7, 0.7, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.7, 0.7, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.7, 0.7, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.7, 0.7, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" data-current="Rito&#x27;s Links" data-easing="ease" data-duration-in="300" data-duration-out="100" class="tabs w-tabs">
       <div class="tabs-menu w-tab-menu">
-        <a data-w-tab="JUMPTAG Club&#x27;s Links" class="tab-link-jumptag-club-s-links w-inline-block w-tab-link w--current">
+        <a data-w-tab="JUMPTAG Club&#x27;s Links" class="tab-link-jumptag-club-s-links w-inline-block w-tab-link">
           <div class="text-block">JUMPTAG Club&#x27;s Links</div>
         </a>
-        <a data-w-tab="Rito&#x27;s Links" class="tab-link-rito-s-links w-inline-block w-tab-link">
+        <a data-w-tab="Rito&#x27;s Links" class="tab-link-rito-s-links w-inline-block w-tab-link w--current">
           <div class="text-block-2">Rito&#x27;s Links</div>
         </a>
       </div>
       <div class="tabs-content w-tab-content">
-        <div data-w-tab="JUMPTAG Club&#x27;s Links" class="w-tab-pane w--tab-active">
+        <div data-w-tab="JUMPTAG Club&#x27;s Links" class="w-tab-pane">
           <div class="div-block-2">
             <a href="https://Jumptag.club" target="_blank" class="profile-item w-inline-block"><img loading="lazy" src="images/white-jc-icon.png" alt="" class="image">
               <div class="text-block-3">Official Merchandise</div>
@@ -68,13 +68,19 @@
             </a>
           </div>
         </div>
-        <div data-w-tab="Rito&#x27;s Links" class="w-tab-pane">
+        <div data-w-tab="Rito&#x27;s Links" class="w-tab-pane w--tab-active">
           <div class="div-block-2">
             <a href="mailto:Rito@jumptag.club?subject=Hello" class="profile-item w-inline-block"><img loading="lazy" src="images/white-jc-icon.png" alt="" class="image">
               <div class="text-block-3">Contact Me</div>
             </a>
             <a href="https://www.linkedin.com/company/jumptag" target="_blank" class="profile-item w-inline-block"><img loading="lazy" src="images/linkedin-white.png" alt="" class="image">
               <div class="text-block-3">LinkedIn</div>
+            </a>
+            <a href="https://www.media.ritovision.com" target="_blank" class="profile-item w-inline-block"><img loading="lazy" src="images/white-camera-icon.png" alt="" class="image">
+              <div class="text-block-3">Photography / Video</div>
+            </a>
+            <a href="https://www.modelmayhem.com/4327669" target="_blank" class="profile-item w-inline-block"><img loading="lazy" src="images/modelmayhem-logo-white.png" alt="" class="image">
+              <div class="text-block-3">ModelMayhem</div>
             </a>
             <a href="https://instagram.com/ritorhymes" target="_blank" class="profile-item w-inline-block"><img loading="lazy" src="images/instagram-white.png" alt="" class="image">
               <div class="text-block-3">Instagram</div>
