--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-wf-page="66d8072b738d878ba01453a3" data-wf-site="66d8072b738d878ba014536e">
 <head>
   <meta charset="utf-8">
-  <title>JUMPTAG CLUB Profile Pages</title>
+  <title>JUMPTAG Club Profile Link</title>
   <meta content="Learn more about the Future of Everyday Wearable Apparel, Jewelry &amp; Accessories." name="description">
   <meta content="JUMPTAG CLUB Profile Pages" property="og:title">
   <meta content="Learn more about the Future of Everyday Wearable Apparel, Jewelry &amp; Accessories." property="og:description">
