--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <a href="https://www.linkedin.com/in/rito-matt-j-pellerito-36779084/" target="_blank" class="profile-item w-inline-block"><img loading="lazy" src="images/linkedin-white.png" alt="" class="image">
               <div class="text-block-3">LinkedIn</div>
             </a>
-            <a href="https://www.media.ritovision.com" target="_blank" class="profile-item w-inline-block"><img loading="lazy" src="images/white-camera-icon.png" alt="" class="image">
+            <a href="https://media.ritovision.com/" target="_blank" class="profile-item w-inline-block"><img loading="lazy" src="images/white-camera-icon.png" alt="" class="image">
               <div class="text-block-3">Photography / Video</div>
             </a>
             <a href="https://www.modelmayhem.com/4327669" target="_blank" class="profile-item w-inline-block"><img loading="lazy" src="images/modelmayhem-logo-white.png" alt="" class="image">
